# sensors-ros-pkg

./: .gitignore  .travis.yml  LICENSE  README.md  dependencies.rosinstall
diver_net/: .gitignore  CMakeLists.txt  (+3 more)
image_processing/image_processing_util/: CMakeLists.txt  package.xml
image_processing/image_processing_util/include/labust/sensors/image/: ColorObjectDetector.hpp  HumanCascadeClassifierDetector.hpp  HumanHogDetector.hpp  ImageProcessingUtil.hpp  ObjectDetector.hpp  TemplateObjectDetector.hpp  VisualOrientationEstimator.hpp
image_processing/image_processing_util/src/: ColorObjectDetector.cpp  HumanCascadeClassifierDetector.cpp  HumanHogDetector.cpp  TemplateObjectDetector.cpp  VisualOrientationEstimator.cpp
image_processing/kinect_ir/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~  pynect.py
image_processing/kinect_ir/src/: kinect_ir_node.cpp  kinect_test.py
image_processing/sonar_image_processing/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
image_processing/sonar_image_processing/cfg/: SonarDetector.cfg
image_processing/sonar_image_processing/launch/: object_tracker.launch
image_processing/sonar_image_processing/msg/: ArisBathymetry.msg  Bathymetry.msg~  SonarAltitude.msg  SonarAltitude.msg~  bathymetry~
image_processing/sonar_image_processing/src/: BathymetryNode.cpp  BathymetryNode.cpp~  ObjectTrackerNode.cpp
labust_kinect/: CMakeLists.txt  openni_settings.xml  package.xml
labust_kinect/include/labust/sensors/: .KinectTransformPublisherNode.hpp.swp  KinectTransformPublisherNode.hpp
labust_kinect/src/: KinectTransformPublisherNode.cpp
reach/: CMakeLists.txt  package.xml
reach/launch/: reach_gps_test.launch  reach_test.launch  rviz_layout.rviz
reach/src/reach_nmea/: reach_nmea.py
reach/src/reach_pub/: reach_pub.py
seatrac/: CMakeLists.txt  comms_plugin.xml  controller_plugin.xml  listeners_plugin.xml  package.xml
seatrac/cfg/: USBLControllerCfg.cfg
seatrac/definitions/: SeatracCommands.xml  SeatracDataTypes.xml  SeatracResponses.xml
seatrac/include/labust/archive/: asciihex_iarchive.hpp
seatrac/include/labust/seatrac/: NavHandler.hpp  SeatracCID.hpp  SeatracDefinitions.hpp  SeatracHandler.hpp  SeatracMessages.hpp  SeatracNode.hpp  StatusHandler.hpp  bridge_controller.h  data_listener.h  datatypes.h  device_controller.h  mediator.h  message_listener.h  nav_listener.h  pinger.h  queued_pinger.h  ros_configure.h  seatrac_comms.h  seatrac_core.h  seatrac_definitions.h  seatrac_factory.h  seatrac_messages.h  seatrac_serial.h  seatrac_sim.h  serialization.h  status_listener.h  usbl_controller.h
seatrac/include/labust/seatrac/detail/: command_defs.h  command_factory_initializer.h  command_impl.h  command_names.h  datatype_defs.h  datatype_impl.h  response_defs.h  response_factory_initializer.h  response_impl.h  response_names.h  seatrac_comms_base.h  serialization_defs.h  typedefs.h  vector_override.hpp
seatrac/include/labust/simulation/: ac_medium_sim.h
seatrac/launch/: buddy_modem.yaml  diver_modem.yaml  modem_runtime.yaml  seatrac_v1.launch  seatrac_v2_debug.perspective  surface_usbl.yaml  tablet_bridge.launch  tablet_bridge2.launch  usbl_driver_test.launch  usbl_runtime.yaml  usbl_sim.launch  usbl_sim.yaml
seatrac/scripts/: bt_port.sh  cpp_msg_generator.py  java_msg_generator.py  msg_generator.py
seatrac/src/ac_medium/: ac_medium_sim.cpp
seatrac/src/seatrac_node/: NavHandler.cpp  SeatracNode.cpp  StatusHandler.cpp  bridge_controller.cpp  data_listener.cpp  nav_listener.cpp  pinger.cpp  queued_pinger.cpp  seatrac_core.cpp  status_listener.cpp  usbl_controller.cpp
seatrac/src/seatrac_sdk/: SeatracHandler.cpp  seatrac_factory.cpp  seatrac_serial.cpp  seatrac_sim.cpp  serialization.cpp
seatrac/src/static_beacon/: static_beacon.cpp
seatrac/src/test/: bitfield_encodings.cpp  factory_tester.cpp  serialization_test.cpp
sensors_util/: CMakeLists.txt  package.xml
sensors_util/include/labust/sensors/: DspUtils.hpp  EllipsoidFit.hpp  ImuComplementaryQuaternionFilter.h  ImuComplementaryQuaternionFilter.hpp  ImuFilter.h  MagnetometerCalibration.hpp
sensors_util/src/: ImuComplementaryQuaternionFilter.cpp  ImuFilter.cpp  curl_down.cpp  serial_sink.cpp
usbl/: CMakeLists.txt  nodelet_plugins.xml  package.xml
usbl/include/labust/tritech/: USBLFilter.hpp
usbl/src/: USBLFilter.cpp
usbl/src/test/: modem_node.cpp
usbl_comms/: CMakeLists.txt  caddy_seatrac_plugins.xml  package.xml  uros_seatrac_plugin.xml  uros_seatrac_plugins.xml
usbl_comms/definitions/caddy/: DiverMessages.xml  Messages.xml  Messages2.xml  Messages3.xml
usbl_comms/definitions/uros/: AcMessages.xml  Messages.xml
usbl_comms/include/labust/comms/: ascii6bit.h
usbl_comms/include/labust/comms/caddy/: ac_handler.h  buddy_handler.h  caddy_messages.h  diver_handler.h  surface_handler.h
usbl_comms/include/labust/comms/uros/: uros_messages.h
usbl_comms/include/labust/seatrac/: buddy_payload.h  buddy_usbl.h  chat_handler.h  chat_module.h  command_module.h  diver_modem.h  diver_payload.h  init_module.h  nav_handler.h  nav_module.h  status_handler.h  surface_usbl.h  uros_modem_controller.h  uros_usbl_controller.h
usbl_comms/launch/caddy/: 2016-05-17T13:15:32.265094_gui_logs.html  2016-05-17T15:35:29.799945_gui_logs.html  ac_medium.launch  buddy_test.launch  buddy_usbl.yaml  diver_modem.yaml  diver_test.launch  surface_test.launch  surface_usbl.yaml  usbl_sim.launch
usbl_comms/launch/uros/: acoustic_sim.launch  modem_lupis.launch  usbl_pladypos.launch
usbl_comms/scripts/: make_caddy_msgs.sh
usbl_comms/src/: USBLManager.cpp
usbl_comms/src/caddy/: buddy_handler.cpp  buddy_usbl.cpp  caddy_messages.cpp  command_module.cpp  diver_handler.cpp  diver_modem.cpp  nav_handler.cpp  nav_module.cpp  status_handler.cpp  surface_handler.cpp  surface_usbl.cpp
usbl_comms/src/test/: encoding_v2.cpp  encoding_v3.cpp  packer_test.cpp  test_diver_payload.cpp
usbl_comms/src/uros/: UROSManager.cpp  UROSModem.cpp  uros_messages.cpp  uros_modem_controller.cpp  uros_usbl_controller.cpp
usbl_comms/test/: test_caddy_comms_structures.cpp
(+100 files in other folders)
