<?xml version="1.0"?>
<package>
  <name>labust_kinect</name>
  <version>0.1.0</version>
  <description>
      The package contains the software used for processing Kinect data.
  </description>

  <maintainer email="ivor.rendulic@gmail.com">Ivor Rendulic</maintainer>
  <license>BSD</license>
  <author email="ivor.rendulic@gmail.com">Ivor Rendulic</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>libopenni-dev</build_depend>
  <build_depend>libusb-1.0-dev</build_depend>
  <build_depend>libopenni-sensor-primesense-dev</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>orocos_kdl</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>sensors_util</build_depend>
  <build_depend>snippets</build_depend>
  <build_depend>cmake_modules</build_depend>

  <run_depend>libopenni-dev</run_depend>
  <run_depend>libusb-1.0-dev</run_depend>
  <run_depend>libopenni-sensor-primesense-dev</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>orocos_kdl</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>tf2_ros</run_depend>
  <run_depend>sensors_util</run_depend>


</package>
