<?xml version="1.0"?>
<package>
  <name>seatrac</name>
  <version>0.1.0</version>
  <description>The seatrac package</description>

  <maintainer email="dula.nad@gmail.com">Gyula Nagy</maintainer>
  <license>BSD</license>
  <!-- <url type="website">http://wiki.ros.org/seatrac</url> -->
  <author email="dula.nad@gmail.com">Gyula Nagy</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>snippets</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>underwater_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>auv_msgs</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>snippets</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>underwater_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
      <seatrac plugin="${prefix}/comms_plugin.xml" />
      <seatrac plugin="${prefix}/listeners_plugin.xml" />
      <seatrac plugin="${prefix}/controller_plugin.xml" />
  </export>
</package>