<?xml version="1.0"?>
<package>
  <name>sensors_util</name>
  <version>0.0.1</version>
  <description>
      General methods for sensors processing.
  </description>

  <maintainer email="ivor.rendulic@gmail.com">Ivor Rendulic</maintainer>
  <license>BSD</license>
  <author email="ivor.rendulic@gmail.com">Ivor Rendulic</author>
  <!-- <url type="website">http://ros.org/wiki/snippets</url> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>snippets</build_depend>
  <build_depend>cmake_modules</build_depend>
  
  <!-- system dependencies -->
  
  <run_depend>roscpp</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
