<?xml version="1.0"?>
<package>
  <name>usbl</name>
  <version>0.1.0</version>
  <description>
      The usbl package contains acquisition of the USBL devices available in LABUST.
      The communication and navigation support are implemented depending on the device.
      Navigation filtering with the kinematic model is implemented. 
  </description>

  <maintainer email="dula.nad@gmail.com">Gyula Nagy</maintainer>
  <license>BSD</license>
  <author email="dula.nad@gmail.com">Gyula Nagy</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>labust_navigation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>auv_msgs</build_depend>
  <build_depend>tritech_sdk</build_depend>
  <build_depend>snippets</build_depend>
    
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>labust_navigation</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>tf2_ros</run_depend>
  <run_depend>auv_msgs</run_depend>
  <run_depend>tritech_sdk</run_depend>

  <export>
    <nodelet plugin="${prefix}/nodelet_plugins.xml" />
  </export>
</package>
