<?xml version="1.0"?>
<package>
  <name>kinect_ir</name>
  <version>0.1.0</version>
  <description>
      IR image processing nodes for Kinect in ROS. 
  </description>

  <maintainer email="anja.babic@fer.hr">Anja Babic</maintainer>
  <license>BSD</license>
  <!-- <url type="website">http://wiki.ros.org/diver_net</url> -->
  <author email="anja.babic@fer.hr">Anja Babic</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>libopencv-dev</build_depend>
  <build_depend>libfreenect</build_depend>
  <build_depend>libusb-1.0-dev</build_depend>
  <build_depend>image_processing_util</build_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>libopencv-dev</run_depend>
  <run_depend>image_processing_util</run_depend>

</package>
