<?xml version="1.0"?>
<package>
  <name>sonar_image_processing</name>
  <version>0.1.0</version>
  <description>
      Image processing nodes for Soundmetrics ARIS sonar.
  </description>

  <maintainer email="ivor.rendulic@gmail.com">Ivor Rendulic</maintainer>
  <license>BSD</license>
  <!-- <url type="website">http://wiki.ros.org/diver_net</url> -->
  <author email="ivor.rendulic@gmail.com">Ivor Rendulic</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>libopencv-dev</build_depend>
  <build_depend>image_processing_util</build_depend>
  <build_depend>labust_navigation</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>underwater_msgs</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>libopencv-dev</run_depend>
  <run_depend>image_processing_util</run_depend>
  <run_depend>labust_navigation</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>underwater_msgs</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>

</package>
